--- a/GBKH/WebRoot/WEB-INF/web.xml
+++ b/GBKH/WebRoot/WEB-INF/web.xml
@@ -20,14 +20,7 @@
     <servlet-name>InitServlet</servlet-name>
     <url-pattern>/InitServlet</url-pattern>
   </servlet-mapping>
-  <servlet>
-    <servlet-name>DiseaseSymptomsImportServlet</servlet-name>
-    <servlet-class>org.just.servlet.DiseaseSymptomsImportServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>DiseaseSymptomsImportServlet</servlet-name>
-    <url-pattern>/DiseaseSymptomsImportServlet</url-pattern>
-  </servlet-mapping>
+
   <context-param>
     <param-name>flex.class.path</param-name>
     <param-value>/WEB-INF/flex/hotfixes,/WEB-INF/flex/jars</param-value>
@@ -35,6 +28,7 @@
   <listener>
     <listener-class>flex.messaging.HttpFlexSession</listener-class>
   </listener>
+  
   <servlet>
     <servlet-name>MessageBrokerServlet</servlet-name>
     <servlet-class>flex.messaging.MessageBrokerServlet</servlet-class>
@@ -48,19 +42,22 @@
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
+  
   <servlet>
     <servlet-name>DownloadExcel</servlet-name>
-    <servlet-class>org.just.xch.servlet.DownloadExcel</servlet-class>
+    <servlet-class>org.just.xch.servlet.DownloadExcelServlet</servlet-class>
   </servlet>
 
   <servlet-mapping>
     <servlet-name>MessageBrokerServlet</servlet-name>
     <url-pattern>/messagebroker/*</url-pattern>
   </servlet-mapping>
+  
   <servlet-mapping>
     <servlet-name>DownloadExcel</servlet-name>
     <url-pattern>/servlet/DownloadExcel</url-pattern>
   </servlet-mapping>
+  
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -69,7 +66,4 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-  <login-config>
-    <auth-method>BASIC</auth-method>
-  </login-config>
 </web-app>
